fix: responsiveness issues on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,6 @@ body {
     height: 100%;
     max-width: 100vw;
     margin: 0;
-    padding: 0 6rem 0 6rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -67,15 +66,33 @@ main {
     :root {
         --gridColumns: 1;
     }
+    body {
+        padding: 0 2rem 0 2rem;
+    }
+    header h1 {
+        font-size: 2.4rem;
+    }
 }
 @media (min-width: 820px) {
     :root {
         --gridColumns: 2;
     }
+    body {
+        padding: 0 3rem 0 3rem;
+    }
+    header h1 {
+        font-size: 2.8rem;
+    }
 }
 @media (min-width: 1280px) {
     :root {
         --gridColumns: 3;
+    }
+    body {
+        padding: 0 6rem 0 6rem;
+    }
+    header h1 {
+        font-size: 3.2rem;
     }
 }
 @media (min-width: 1600px) {
